# playground-2026

./: .gitignore  README.md  biome.json  next.config.ts  package.json  pnpm-lock.yaml  wrangler.json
.devdev/aws-bedrock-nova-sonic-try/: .gitignore  README.md  main.py  pyproject.toml
agent-browser-try/: README.md
ai-structured-outputs-try/: README.md  main.ts  package.json  pnpm-lock.yaml
apache-airflow-try/: .gitignore  README.md  compose.yml
app/: EntryCard.tsx  EntryCardCommentsLayer.tsx  EntryCardFooter.tsx  EntryCards.tsx  client.ts  globals.css  layout.tsx  page.tsx  svgs.tsx  types.ts  use.tsx
apple-container-v1-try/: Dockerfile  README.md
aws-agentcore-runtime-try/: README.md
aws-appsync-events-try/: README.md
aws-bedrock-agentcore-try/: .gitignore  README.md  pyproject.toml
aws-bedrock-agentcore-try/src/model/: load.py
aws-bedrock-nova-sonic-try/: README.md  data.json  main.py  pyproject.toml
aws-blocks-try/: README.md
aws-cloudwatch-coding-agent-insights-try/: README.md
aws-documentdb-try/: README.md  main.py  pyproject.toml
aws-eks-try/: README.md
aws-elasticache-try/: README.md
aws-elasticbeanstalk-try/: README.md
aws-identity-center-retry/: README.md
aws-iot-core-send-direct-message-try/: README.md
aws-lambda-microvms-try/: .gitignore  Dockerfile  README.md  Taskfile.yml
aws-lightsail-cdn-try/: README.md
aws-location-service-try/: README.md  try0.html  try1.html
aws-managed-grafana-try/: README.md
aws-mcp-server-try/: README.md
aws-memorydb-valkey-try/: README.md
aws-opensearch-serverless-nextgen-try/: README.md
aws-opensearch-ui-try/: README.md
aws-polly-try/: README.md
aws-quick-try/: README.md
aws-s3files-try/: README.md
aws-sagemaker-unified-studio-try/: README.md
aws-transform-custom-try/: README.md
google-cloud-speech-to-text-api/streaming-try/: .gitignore  Cargo.toml  build.rs
google-cloud-speech-to-text-api/streaming-try/proto/google/cloud/speech/v1/: cloud_speech.proto
google-cloud-speech-to-text-api/streaming-try/src/: main.rs
rust-topcoat-try/: Cargo.toml  README.md  build.rs
rust-topcoat-try/src/: main.rs
(+726 files in other folders)
