[package]
name = "rust-topcoat-try"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.229", features = ["derive"]}
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros"] }
topcoat = { git = "https://github.com/tokio-rs/topcoat", version = "0.4.0", features = ["tailwind"] }

[build-dependencies]
topcoat = { git = "https://github.com/tokio-rs/topcoat", version = "0.4.0", features = ["tailwind"] }
